--- a/.github/workflows/deploy-azure-function.yml
+++ b/.github/workflows/deploy-azure-function.yml
@@ -18,8 +18,8 @@ jobs:
           docker build . -t func-analise-dados
 
       - name: Deploy container to Azure Function App
-        uses: azure/webapps-deploy@v2
+        uses: Azure/functions-action@v1
         with:
           app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-          images: func-analise-dados
+          package: .
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
