--- a/.github/workflows/deploy-azure-function.yml
+++ b/.github/workflows/deploy-azure-function.yml
@@ -1,26 +1,31 @@
-name: Build and Deploy Azure Function App (Docker)
+name: CI/CD Testes Dados
 
 on:
   push:
     branches:
       - main
+  pull_request:
   workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Git repo
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Build Docker image
-        run: |
-          docker build . -t func-analise-dados
-
-      - name: Deploy container to Azure Function App
-        uses: Azure/functions-action@v1
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-          package: .
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          python-version: 3.11
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Aqui você coloca seus testes (se tiver)
+      - name: Run tests (opcional)
+        run: |
+          echo "Rodar testes aqui se tiver pytest etc."
