--- a/.github/workflows/deploy-azure-function.yml
+++ b/.github/workflows/deploy-azure-function.yml
@@ -1,31 +1,30 @@
-name: CI/CD Testes Dados
+name: Build and Deploy Azure Function App (Docker)
 
 on:
   push:
     branches:
       - main
-  pull_request:
   workflow_dispatch:
 
 jobs:
-  build-and-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout Git repo
         uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - name: Log in to Azure
+        uses: azure/login@v1
         with:
-          python-version: 3.11
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Install dependencies
+      - name: Build Docker image
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          docker build . -t func-analise-dados
 
-      # Aqui você coloca seus testes (se tiver)
-      - name: Run tests (opcional)
-        run: |
-          echo "Rodar testes aqui se tiver pytest etc."
+      - name: Deploy container to Azure Function App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+          images: func-analise-dados
